# decker

./: .gitignore  README.md  pyproject.toml
decker/: card.py  carta.py  color.py  colors.py  deck.py  suit.py  utils.py
